# Kalman_filter_task3

./: .gitignore  CMakeLists.txt  Filtered_values.cpp  README.md  R_matrix.py  filter_still.cpp  main.cpp  plot_test.py  plot_test_still.py  plots.py  read_sensor.cpp  vcpkg.json  write_sensor_values.cpp
Data_collection/R/: R_matrix.csv
Data_collection/filtered/: Filtered_wrench_output.csv  Filtered_wrench_output_test1.csv  Filtered_wrench_output_test_standing_still.csv
Data_collection/variances/: output_wrench_log.csv  output_wrench_log_test.csv  output_wrench_log_test2.csv  output_wrench_log_test3.csv  output_wrench_log_test_standing_still.csv
Filtered_data/: 1-baseline_accel_raw.csv  1-baseline_kf.csv  1-baseline_orientations_raw.csv  1-baseline_wrench_raw.csv  2-vibrations_accel_raw.csv  2-vibrations_kf.csv  2-vibrations_orientations_raw.csv  2-vibrations_wrench_raw.csv  3-vibrations-contact_accel_raw.csv  3-vibrations-contact_kf.csv  3-vibrations-contact_orientations_raw.csv  3-vibrations-contact_wrench_raw.csv
Joint_data/: tf_test_24_11_nr_1.csv
Params/: params_lasso_quadratic.csv
include/: MPC.hpp  kalman.hpp
src/: CMakeLists.txt  kalman.cpp
